added design to typed word list

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
   <div class="container">
     <h1>Site Under  
-      <span class="txt-type" data-wait="3000" data-words='["Construction", "Creation", "Maintenance"]'></span>
+      <span class="txt-type" data-wait="3000" data-words='["Construction", "Design", "Creation", "Maintenance"]'></span>
     </h1>
     <h2>Thanks for stopping by.</h2>
   </div>
